Fix syntax errors that prevent menu from rendering on mobile devicds
css/geos-chem.css
- Removed stray character
- Add missing closing brace after .a.active
- Add missing closing brace in the @media block

--- a/css/geos-chem.css
+++ b/css/geos-chem.css
@@ -1,86 +1,84 @@
+/* Always creates a vertical scroll bar, to precisely center text */
 html {
-  height            : 102%;  /* Always creates a vertical scroll bar, to precisely center text */
+    height: 102%;
 }
 
 .green {
-	color: #009900;
+    color: #009900;
 }
 
 .red {
-	color: #FF0000;
+    color: #ff0000;
 }
 
 .blue {
-	color: #0000FF;
+    color: #0000ff;
 }
 
 /* z-index of secondary menu to place it behind the drop downs of primary menu */
 #block-os-igc10-menu {
-  z-index: 1;
+    z-index: 1;
 }
 
 /* Font face */
 body {
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  color: #000000;
-  font-size: 1.2em;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    color: #000000;
+    font-size: 1.2em;
 }
 
 /* Remove Harvard branding */
 #branding_footer, #branding_header {
-  background: #1e1e1e;
-  color: #FFF;
-  font-weight: bold;
-  display: none;
+    background: #1e1e1e;
+    color: #ffffff;
+    font-weight: bold;
+    display: none;
 }
 
 /* meeting styles */
 .css-brand--css-geos-meetings-header-h2-xxxlarge {
-  color: #000;
-  font-size: xxx-large !important;
-  font-weight: 600 !important;
-  line-height: 1.5 !important;
+    color: #000000;
+    font-size: xxx-large !important;
+    font-weight: 600 !important;
+    line-height: 1.5 !important;
 }
 
 .css-brand--css-geos-meetings-header-h2 {
-  color: #000;
-  font-size: xx-large !important;
-  font-weight: 600 !important;
-  line-height: normal !important;
+    color: #000000;
+    font-size: xx-large !important;
+    font-weight: 600 !important;
+    line-height: normal !important;
 }
 .css-brand--css-geos-meetings-header-h3 {
-  color: #000;
-  font-size: x-large !important;
-  font-weight: 600 !important;
-  line-height: normal !important;
+    color: #000000;
+    font-size: x-large !important;
+    font-weight: 600 !important;
+    line-height: normal !important;
 }
 
 /* Size and align GEOS-Chem logo */
 #boxes-box-site_logo {
-  width: 30em;
-  margin: auto;
+    width: 30em;
+    margin: auto;
 }
 
 /* menu style so that links don't wrap*/
 #menu-bar ul.nice-menu .menuparent a {
-  padding-right: 15px;
+    padding-right: 15px;
 
-  /* NOTE: Increase bottom & top padding to eliminate space
+    /* NOTE: Increase bottom & top padding to eliminate space
      between the menu bar and the dropdowns.                  */
-  padding-bottom: 12px;
-  padding-top: 12px;
+    padding-bottom: 12px;
+    padding-top: 12px;
 
-  position: relative;<  font-size: inherit;
-  text-transform: none;
-  font-weight: bold;
+    position: relative;
+    font-size: inherit;
+    text-transform: none;
+    font-weight: bold;
 }
+
 #menu-bar ul.nice-menu .menuparent {
-  padding-right: 0px;
-}
-
-/* Header */
-#header {
-  background: #fff !important;
+    padding-right: 0px;
 }
 
 #menu-bar {
@@ -89,31 +87,44 @@ body {
 }
 
 #menu-bar ul.nice-menu a.active {
-  background: #fff;
-  color: #215990;
-  font-weight: 800;
-
-
-#menu-bar ul.nice-menu ul, #menu-bar ul.nice-menu a:hover {
-  background: #027ac6;
-  color: #fff;
-  font-weight: 800;
+    background: #fff;
+    color: #215990;
+    font-weight: 800;
 }
 
-#menu-bar ul.nice-menu .menuparent.over > a, #menu-bar ul.nice-menu .menuparent a:hover {
-  background-color: #fff;
-  color: #027ac6;
-  font-weight: 800;
+#menu-bar ul.nice-menu ul,
+#menu-bar ul.nice-menu a:hover {
+    background: #027ac6;
+    color: #ffffff;
+    font-weight: 800;
+}
+
+#menu-bar ul.nice-menu .menuparent.over > a,
+#menu-bar ul.nice-menu .menuparent a:hover {
+    background-color: #ffffff;
+    color: #027ac6;
+    font-weight: 800;
+}
+
+/* Optional: make sure menus can overlay other content */
+#menu-bar {
+    position: relative;
+    z-index: 1000;
+}
+
+#menu-bar ul.nice-menu ul {
+    position: absolute;
+    z-index: 2000;
 }
 
 /* Responsiveness */
 @media (max-width: 1008px) {
-  #menu-bar ul.nice-menu li {
-  background-color: #215990 !important;
-  color: #000 !important;
-  font-weight: bold;
-  }
-  #menu-bar #block-os-primary-menu a {
-  color: #ffffff !important;
-}
+    #menu-bar ul.nice-menu li {
+	background-color: #215990 !important;
+	color: #000000 !important;
+	font-weight: bold;
+    }
+    #menu-bar #block-os-primary-menu a {
+	color: #ffffff !important;
+    }
 }
